--- a/02_hw_data_wrangling.Rmd
+++ b/02_hw_data_wrangling.Rmd
@@ -1,19 +1,21 @@
 ---
-title: "Problem Set 2: Data Wrangling"
-author: Your Name Here
-output: pdf_document
+title: 'Problem Set 2: Data Wrangling'
+author: "Taylor D'Andrea"
+output:
+  pdf_document: default
+  html_document:
+    df_print: paged
 ---
-
 
 ```{r setup, include = FALSE}
 options(width = 100)
+
+library(ggplot2)
 ```
 
 ## Background
 
 Political advertising has traditionally been focused on the medium of television, but in recent cycles, online advertising has become much more popular. In this problem set, you will explore a dataset that has information on Facebook ad spending and impressions by candidates in the 2018 election cycle in the United States. The variables in this data are described below. 
-
-
 
 | Name               | Description                                                          |
 |:-------------------|:---------------------------------------------------------------------|
@@ -30,9 +32,6 @@ Political advertising has traditionally been focused on the medium of television
 | `ad_tone_promote`  | proportion of FB ads that mention candidate only                     |
 | `ad_tone_contrast` | proportion of FB ads that mention candidate and candidate's opponent |
 
-
-
-
 \newpage
 
 ## Question 1 (8 points)
@@ -45,7 +44,21 @@ Use `dplyr` functions to create a table with the number of candidates in each ty
 
 ## Answer 1
 
+```{r}
+fb_ads <- read.csv("data/fb_ads.csv")
+```
 
+There are 7,041 political candidates in this data set. 
+
+```{r}
+library(dplyr) 
+incumbency_table <- fb_ads |>
+  group_by(incumbency) |>
+  summarize(n()) |>
+  knitr::kable()
+
+incumbency_table
+```
 
 \newpage
 
@@ -65,12 +78,26 @@ In the writeup, describe which type of candidate sponsored the most promoting ad
 
 ## Answer 2
 
+```{r}
+filtered_fb_ads <- fb_ads |>
+  filter(office %in% c("US House", "US Senate"))
 
+party_incumbent_promote <- filtered_fb_ads |>
+  group_by(party, incumbency) |>
+  summarize(promote_prop = mean(ad_tone_promote, na.rm = TRUE))
+
+knitr::kable(party_incumbent_promote, 
+             digits = 3, 
+             col.names = c("Party", "Incumbency Status", "Promote Proportion"))
+
+party_incumbent_promote
+```
+
+Democratic Incumbent candidates sponsored the most promoting ads on average, with their promote proportion being 0.854. 
 
 \newpage
 
 ## Question 3 (7 points)
-
 
 Create a new variable called `impressions_millions` that is the total Facebook ad impressions in millions (as opposed to single impressions). Make sure to save the resulting dataset back as `fb_ads`.
 
@@ -79,8 +106,28 @@ Create a histogram of this variable for just the US House races. Save the ggplot
  **Rubric:** 2pt for creating the new variable (autograder); 3pts for creating the histogram object (autograder); 2pts for answering the question about the histogram (PDF)
 
 ## Answer 3
+The new variable 'impressions_millions':
+```{r}
+fb_ads <- fb_ads |>
+  mutate(impressions_millions = impressions / 1000000)
+```
 
+The histogram of 'impressions_millions' for US House races: 
+```{r}
+plot_q3 <- ggplot(data = fb_ads,
+                  mapping = aes(x = impressions_millions)) +
+  geom_histogram(binwidth = 1, alpha = 0.7) + 
+  labs(title = "Facebook Ad Impressions for US House Candidates", 
+       x = "Facebook Ad Impressions (in millions)", 
+       y = "Number of US House Candidates") +
+  facet_wrap(~ office == "US House") +
+  xlim(0, 20) +
+  ylim(0, 200)
 
+plot_q3
+```
+
+This histogram is skewed to the left of 10 million, peaking at around 1.5 million and decreasing from there. Therefore, most House candidates did not have more than 10 million ad impressions on Facebook. 
 
 \newpage
 
@@ -103,11 +150,26 @@ You do not need to exactly match the labels, but you should have informative lab
 
 ## Answer 4
 
+```{r}
+top_cand <- fb_ads |> 
+  filter(office == "US House") |> 
+  slice_max(order_by = impressions_millions, n=15) |>
+  mutate(cand_name_last = reorder(cand_name_last, 
+                                  impressions_millions))
 
+fb_top_plot <- ggplot(top_cand, aes(x = impressions_millions, 
+                                    y = cand_name_last, 
+                                    fill = party)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Top 15 House Candidates Facebook Ad Impressions, 2017-2018", 
+       x = "Facebook Ad Impressions (in millions)", 
+       y = "Candidate Last Name") +
+  scale_fill_manual(values = c(R = "red", D = "blue"))
+
+fb_top_plot
+```
 
 \newpage
-
-
 
 # Code
 
