--- a/02_hw_data_wrangling.Rmd
+++ b/02_hw_data_wrangling.Rmd
@@ -11,6 +11,8 @@ output:
 options(width = 100)
 
 library(ggplot2)
+library(readr)
+library(tidyverse)
 ```
 
 ## Background
@@ -45,7 +47,7 @@ Use `dplyr` functions to create a table with the number of candidates in each ty
 ## Answer 1
 
 ```{r}
-fb_ads <- read.csv("data/fb_ads.csv")
+fb_ads <- read_csv("data/fb_ads.csv")
 ```
 
 There are 7,041 political candidates in this data set. 
@@ -55,7 +57,7 @@ library(dplyr)
 incumbency_table <- fb_ads |>
   group_by(incumbency) |>
   summarize(n()) |>
-  knitr::kable()
+  knitr::kable(ncol = 2)
 
 incumbency_table
 ```
